--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "Assignment 1 for backend engineering launchpad",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon app.js",
+    "start": "node app.js",
     "pretest": "node -e \"if (process.version.slice(1).split('.')[0] < 18) { console.error('Unsupported Node.js version, please use version 18'); process.exit(1); }\"",
     "test": "tap test/*.js --disable-coverage"
   },
   "author": "Airtribe",
   "license": "ISC",
   "devDependencies": {
+    "nodemon": "^3.1.0",
     "supertest": "^6.3.4",
     "tap": "^18.6.1"
   },
